--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - python setup.py install
 
 script:
+  - python setup.py lint
   - python setup.py test
 
 after_success: python setup.py coverage
