Codestyle checking was added for tests.

--- a/.pylintrc
+++ b/.pylintrc
@@ -36,6 +36,7 @@ load-plugins=pylint.extensions.bad_builtin,
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
 disable=abstract-method,
+    arguments-differ,
     bad-builtin,
     cyclic-import,
     duplicate-code,
@@ -45,6 +46,7 @@ disable=abstract-method,
     too-many-ancestors,
     too-many-branches,
     too-many-instance-attributes,
+    too-many-lines,
     too-many-locals,
     too-many-public-methods,
     too-many-statements,
